@startuml

class Agent {
    +List<Message> messages
    +DateTime alarmTime
    +render()
    +addUserEntry(String newMessage)
    +addAgentEntry(String newMessage)
    +addSystemMessage(String newMessage)
    +manageUserEntry(String message)
    -confirm(Action action, String message)
    -manageConfirmed()
    -managedDeclined()
    -createAlarm()
}
class Dialog {
    +render()
    -onSend(String message)
    -onSpeechResults()
}
class System {
    +{static} getLocation()
    +{static} setAlarm(String message, DateTime date, String soundName)
}
class AgentAPI {
    +{static} createDialog(String text)
    +{static} addEntry(String sessionId, String text)
    -{static} callAPI(String endpoint, String method, String text)
}
class WeatherAPI {
    +getWeather()
    -getWeatherInfos(String longitude, String latitude)
    -getWeatherGlobal(List<String> weatherIds)
    -idBeginsWith(String id, String firstDigit)
}

Agent "1" o-up- "*" Dialog : renders
Agent "1" -left-> "1" System : is part\nof / uses
Agent --> WeatherAPI : calls
Agent --> AgentAPI : calls
WeatherAPI --> System : gets\nlocation\nfrom

@enduml
